Fixed card flip on mobile

--- a/style.css
+++ b/style.css
@@ -426,7 +426,6 @@ main {
         height: 100px;
         position: absolute;
         width: 100%;
-        backface-visibility: hidden;
         transform-style: preserve-3d;
     }
 
